--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<script src="https://secure.aadcdn.microsoftonline-p.com/lib/0.2.3/js/msal.js"></script>
+		<link rel="manifest" href="/manifest.json">
 	</head>
 	<body>
 		<bok-root></bok-root>
