--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<script src="https://secure.aadcdn.microsoftonline-p.com/lib/0.2.3/js/msal.js"></script>
+
 		<link rel="manifest" href="/manifest.json">
+		<meta name="theme-color" content="#ae5342">
+		<link rel="apple-touch-icon" href="/assets/logos/logo_192.png">
 	</head>
 	<body>
 		<bok-root></bok-root>
