No JavaScript "friendly"
Recommendation from Lighthouse audit

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
 		<link rel="apple-touch-icon" href="/assets/logos/logo_192.png">
 	</head>
 	<body>
-		<bok-root></bok-root>
+		<bok-root>
+			<h1>Kokbok</h1>
+			<p>Var vänlig aktivera <code>JavaScript</code> för att använda appen.</p>
+		</bok-root>
 	</body>
 </html>
