META tags for older phones

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
 		<link rel="manifest" href="/manifest.json">
 		<meta name="theme-color" content="#ae5342">
 		<link rel="apple-touch-icon" href="/assets/logos/logo_192.png">
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="msapplication-starturl" content="/">
 	</head>
 	<body>
 		<bok-root>
