--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,23 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="msapplication-starturl" content="/">
+
+		<script>
+			if ("serviceWorker" in navigator) {
+				if (navigator.serviceWorker.controller) {
+					console.log("[PWA Builder] active service worker found, no need to register");
+				} else {
+					// Register the service worker
+					navigator.serviceWorker
+						.register("serviceWorker.js", {
+							scope: "./"
+						})
+						.then(function (reg) {
+							console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+						});
+				}
+			}
+		</script>
 	</head>
 	<body>
 		<bok-root>
